--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apiglot/cli",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -15,8 +15,10 @@
     "apiglot": "./index.js"
   },
   "dependencies": {
+    "@inquirer/prompts": "^8.2.0",
     "chalk": "^5.6.2",
     "commander": "^14.0.2",
+    "i18next-resources-for-ts": "^2.0.0",
     "uuid": "^13.0.0"
   }
 }
